--- a/node9.html
+++ b/node9.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html910"
+<A NAME="tex2html913"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html904"
+<A NAME="tex2html907"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html898"
+<A NAME="tex2html901"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html906"
+<A NAME="tex2html909"
   HREF="node88.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html908"
+<A NAME="tex2html911"
   HREF="node91.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -80,18 +80,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html911"
+<B> Sig:</B> <A NAME="tex2html914"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html905"
+<B>Sup:</B> <A NAME="tex2html908"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html899"
+<B> Ant:</B> <A NAME="tex2html902"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 <B> Con:</B> 
-<A NAME="tex2html906"
+<A NAME="tex2html909"
   HREF="node88.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html908"
+<A NAME="tex2html911"
   HREF="node91.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -103,30 +103,36 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html912"
-  HREF="node9.html#SECTION04120010000000000000">index.html</A>
-<LI><A NAME="tex2html913"
-  HREF="node9.html#SECTION04120020000000000000">global.css</A>
-<LI><A NAME="tex2html914"
-  HREF="node9.html#SECTION04120030000000000000">temperature.js</A>
 <LI><A NAME="tex2html915"
-  HREF="node9.html#SECTION04120040000000000000">Despliegue</A>
+  HREF="node9.html#SECTION04120010000000000000">index.html</A>
 <LI><A NAME="tex2html916"
-  HREF="node9.html#SECTION04120050000000000000">Mocha y Chai</A>
+  HREF="node9.html#SECTION04120020000000000000">global.css</A>
 <LI><A NAME="tex2html917"
-  HREF="node9.html#SECTION04120060000000000000">Pruebas: Estructura</A>
+  HREF="node9.html#SECTION04120030000000000000">Sintáxis CSS</A>
 <LI><A NAME="tex2html918"
-  HREF="node9.html#SECTION04120070000000000000">Pruebas: <TT>index.html</TT></A>
+  HREF="node9.html#SECTION04120040000000000000">Selectores en CSS</A>
 <LI><A NAME="tex2html919"
-  HREF="node9.html#SECTION04120080000000000000">Pruebas: Añadir los tests</A>
+  HREF="node9.html#SECTION04120050000000000000">Propiedades CSS</A>
 <LI><A NAME="tex2html920"
-  HREF="node9.html#SECTION04120090000000000000">Pruebas: Véase</A>
+  HREF="node9.html#SECTION04120060000000000000">temperature.js</A>
+<LI><A NAME="tex2html921"
+  HREF="node9.html#SECTION04120070000000000000">Despliegue</A>
+<LI><A NAME="tex2html922"
+  HREF="node9.html#SECTION04120080000000000000">Mocha y Chai</A>
+<LI><A NAME="tex2html923"
+  HREF="node9.html#SECTION04120090000000000000">Pruebas: Estructura</A>
+<LI><A NAME="tex2html924"
+  HREF="node9.html#SECTION041200100000000000000">Pruebas: <TT>index.html</TT></A>
+<LI><A NAME="tex2html925"
+  HREF="node9.html#SECTION041200110000000000000">Pruebas: Añadir los tests</A>
+<LI><A NAME="tex2html926"
+  HREF="node9.html#SECTION041200120000000000000">Pruebas: Véase</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
 
 <H1><A NAME="SECTION04120000000000000000"></A>
-   <A NAME="2566"></A>
+   <A NAME="2567"></A>
   
 <A NAME="sectionpractica:conversordetemperaturas"></A>
 <BR>
@@ -321,7 +327,7 @@ The <code>onchange</code> event occurs when the value of an element has been cha
  &lt;link href="global.css" rel="stylesheet" type="text/css"&gt;
 </PRE>
 </LI>
-<LI><A NAME="2571"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2573"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
+<LI><A NAME="2572"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2574"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
 </LI>
 </UL>
 
@@ -363,37 +369,45 @@ h1 {
 
 <P>
 
-<UL>
-<LI><PRE>
+<H4><A NAME="SECTION04120030000000000000">
+Sintáxis CSS</A>
+</H4>
+  
+
+<P>
+<PRE>
 th, td      { vertical-align: top; text-align: right; font-size:large; }     /* Don't center table cells  */
 </PRE>
-What you see above is referred to as a <A NAME="2579"></A><SPAN  CLASS="textit">rule set</SPAN>. 
+What you see above is referred to as a <A NAME="2584"></A><SPAN  CLASS="textit">rule set</SPAN>. 
 
 <P>
 
 <UL>
 <LI>Notice the curly braces. Also, notice that each statement inside the curly braces has a semi-colon. Everything
-inside the curly braces is called a <A NAME="2581"></A><SPAN  CLASS="textit">declaration block</SPAN>.
+inside the curly braces is called a <A NAME="2586"></A><SPAN  CLASS="textit">declaration block</SPAN>.
 </LI>
-<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2583"></A><SPAN  CLASS="textit">selector</SPAN>.
+<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2588"></A><SPAN  CLASS="textit">selector</SPAN>.
 
 <P>
 Here we're using commas to separate our selectors <code>th</code> and <code>td</code>. 
 This is a useful method to use to combine multiple selectors in a single rule set. 
 In this case, the styles will apply to all <code>&lt;th&gt;</code> and <code>&lt;td&gt;</code> elements,
 </LI>
-<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2585"></A><SPAN  CLASS="textit">declaration</SPAN>. 
+<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2590"></A><SPAN  CLASS="textit">declaration</SPAN>. 
 </LI>
-<LI>Additionally, each declaration consists of a <A NAME="2587"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
-and a <A NAME="2589"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
+<LI>Additionally, each declaration consists of a <A NAME="2592"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
+and a <A NAME="2594"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
 </LI>
 <LI>Each CSS declaration ends with a semi-colon.
 </LI>
 </UL>
 
 <P>
-</LI>
-<LI> <B>Selectores:</B>
+
+<H4><A NAME="SECTION04120040000000000000">
+Selectores en CSS</A>
+</H4>
+  
 
 <UL>
 <LI>A selector of <code>nav</code> would match all HTML <code>&lt;nav&gt;</code> elements, and a selector of <code>ul</code> would match all HTML unordered lists, or <code>&lt;ul&gt;</code> elements.
@@ -419,7 +433,13 @@ applies to:
 </UL>
 
 <P>
-</LI>
+
+<H4><A NAME="SECTION04120050000000000000">
+Propiedades CSS</A>
+</H4>
+  
+
+<UL>
 <LI>The CSS 
 <A NAME="tex2html27"
   HREF="http://www.w3schools.com/css/css_padding.asp">padding</A>
@@ -547,7 +567,7 @@ a:hover {
 
 <P>
 
-<H4><A NAME="SECTION04120030000000000000">
+<H4><A NAME="SECTION04120060000000000000">
 temperature.js</A>
 </H4>
   
@@ -586,7 +606,7 @@ temperature.js</A>
 
 <P>
 
-<H4><A NAME="SECTION04120040000000000000">
+<H4><A NAME="SECTION04120070000000000000">
 Despliegue</A>
 </H4>
   
@@ -599,7 +619,7 @@ Vea la sección <I>GitHub Project Pages</I> <A HREF="node85.html#subsection:gith
 
 <P>
 
-<H4><A NAME="SECTION04120050000000000000">
+<H4><A NAME="SECTION04120080000000000000">
 Mocha y Chai</A>
 </H4>
   
@@ -623,7 +643,7 @@ helpers to perform all kinds of assertions against your JavaScript code.
 
 <P>
 
-<H4><A NAME="SECTION04120060000000000000">
+<H4><A NAME="SECTION04120090000000000000">
 Pruebas: Estructura</A>
 </H4>
   
@@ -699,7 +719,7 @@ el testing framework Mocha y  Chai en el repositorio
 
 <P>
 
-<H4><A NAME="SECTION04120070000000000000">
+<H4><A NAME="SECTION041200100000000000000">
 Pruebas: <TT>index.html</TT></A>
 </H4>
   
@@ -754,7 +774,7 @@ Modificamos <code>index.html</code> para
 
 <P>
 
-<H4><A NAME="SECTION04120080000000000000">
+<H4><A NAME="SECTION041200110000000000000">
 Pruebas: Añadir los tests</A>
 </H4>
   
@@ -799,7 +819,7 @@ suite('temperature', function() {
 
 <P>
 
-<H4><A NAME="SECTION04120090000000000000">
+<H4><A NAME="SECTION041200120000000000000">
 Pruebas: Véase</A>
 </H4>
   
@@ -821,19 +841,19 @@ by Nicolas Perriault
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html910"
+<A NAME="tex2html913"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html904"
+<A NAME="tex2html907"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html898"
+<A NAME="tex2html901"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html906"
+<A NAME="tex2html909"
   HREF="node88.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html908"
+<A NAME="tex2html911"
   HREF="node91.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -873,11 +893,11 @@ by Nicolas Perriault
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html911"
+<B> Sig:</B> <A NAME="tex2html914"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html905"
+<B>Sup:</B> <A NAME="tex2html908"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html899"
+<B> Ant:</B> <A NAME="tex2html902"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 </DIV>
 <!--End of Navigation Panel-->
