--- a/node9.html
+++ b/node9.html
@@ -383,7 +383,7 @@ What you see above is referred to as a <A NAME="2584"></A><SPAN  CLASS="textit">
 <P>
 
 <UL>
-<LI>Notice the curly braces. Also, notice that each statement inside the curly braces has a semi-colon. Everything
+<LI>Notice the curly braces. Also, notice that each statement inside the curly braces has a semicolon. Everything
 inside the curly braces is called a <A NAME="2586"></A><SPAN  CLASS="textit">declaration block</SPAN>.
 </LI>
 <LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2588"></A><SPAN  CLASS="textit">selector</SPAN>.
@@ -398,7 +398,7 @@ In this case, the styles will apply to all <code>&lt;th&gt;</code> and <code>&lt
 <LI>Additionally, each declaration consists of a <A NAME="2592"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
 and a <A NAME="2594"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
 </LI>
-<LI>Each CSS declaration ends with a semi-colon.
+<LI>Each CSS declaration ends with a semicolon.
 </LI>
 </UL>
 
