--- a/node9.html
+++ b/node9.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html913"
+<A NAME="tex2html916"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html907"
+<A NAME="tex2html910"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html901"
+<A NAME="tex2html904"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html909"
+<A NAME="tex2html912"
   HREF="node88.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html911"
+<A NAME="tex2html914"
   HREF="node91.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -80,18 +80,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html914"
+<B> Sig:</B> <A NAME="tex2html917"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html908"
+<B>Sup:</B> <A NAME="tex2html911"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html902"
+<B> Ant:</B> <A NAME="tex2html905"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 <B> Con:</B> 
-<A NAME="tex2html909"
+<A NAME="tex2html912"
   HREF="node88.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html911"
+<A NAME="tex2html914"
   HREF="node91.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -103,36 +103,38 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html915"
-  HREF="node9.html#SECTION04120010000000000000">index.html</A>
-<LI><A NAME="tex2html916"
-  HREF="node9.html#SECTION04120020000000000000">global.css</A>
-<LI><A NAME="tex2html917"
-  HREF="node9.html#SECTION04120030000000000000">Sintáxis CSS</A>
 <LI><A NAME="tex2html918"
-  HREF="node9.html#SECTION04120040000000000000">Selectores en CSS</A>
+  HREF="node9.html#SECTION04120010000000000000">index.html</A>
 <LI><A NAME="tex2html919"
-  HREF="node9.html#SECTION04120050000000000000">Propiedades CSS</A>
+  HREF="node9.html#SECTION04120020000000000000">global.css</A>
 <LI><A NAME="tex2html920"
-  HREF="node9.html#SECTION04120060000000000000">temperature.js</A>
+  HREF="node9.html#SECTION04120030000000000000">Sintáxis CSS</A>
 <LI><A NAME="tex2html921"
-  HREF="node9.html#SECTION04120070000000000000">Despliegue</A>
+  HREF="node9.html#SECTION04120040000000000000">Selectores en CSS</A>
 <LI><A NAME="tex2html922"
-  HREF="node9.html#SECTION04120080000000000000">Mocha y Chai</A>
+  HREF="node9.html#SECTION04120050000000000000">CSS reset</A>
 <LI><A NAME="tex2html923"
-  HREF="node9.html#SECTION04120090000000000000">Pruebas: Estructura</A>
+  HREF="node9.html#SECTION04120060000000000000">Propiedades CSS</A>
 <LI><A NAME="tex2html924"
-  HREF="node9.html#SECTION041200100000000000000">Pruebas: <TT>index.html</TT></A>
+  HREF="node9.html#SECTION04120070000000000000">temperature.js</A>
 <LI><A NAME="tex2html925"
-  HREF="node9.html#SECTION041200110000000000000">Pruebas: Añadir los tests</A>
+  HREF="node9.html#SECTION04120080000000000000">Despliegue</A>
 <LI><A NAME="tex2html926"
-  HREF="node9.html#SECTION041200120000000000000">Pruebas: Véase</A>
+  HREF="node9.html#SECTION04120090000000000000">Mocha y Chai</A>
+<LI><A NAME="tex2html927"
+  HREF="node9.html#SECTION041200100000000000000">Pruebas: Estructura</A>
+<LI><A NAME="tex2html928"
+  HREF="node9.html#SECTION041200110000000000000">Pruebas: <TT>index.html</TT></A>
+<LI><A NAME="tex2html929"
+  HREF="node9.html#SECTION041200120000000000000">Pruebas: Añadir los tests</A>
+<LI><A NAME="tex2html930"
+  HREF="node9.html#SECTION041200130000000000000">Pruebas: Véase</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
 
 <H1><A NAME="SECTION04120000000000000000"></A>
-   <A NAME="2582"></A>
+   <A NAME="2590"></A>
   
 <A NAME="sectionpractica:conversordetemperaturas"></A>
 <BR>
@@ -327,7 +329,7 @@ The <code>onchange</code> event occurs when the value of an element has been cha
  &lt;link href="global.css" rel="stylesheet" type="text/css"&gt;
 </PRE>
 </LI>
-<LI><A NAME="2587"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2589"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
+<LI><A NAME="2595"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2597"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
 </LI>
 </UL>
 
@@ -378,25 +380,25 @@ Sintáxis CSS</A>
 <PRE>
 th, td      { vertical-align: top; text-align: right; font-size:large; }     /* Don't center table cells  */
 </PRE>
-What you see above is referred to as a <A NAME="2599"></A><SPAN  CLASS="textit">rule set</SPAN>. 
+What you see above is referred to as a <A NAME="2607"></A><SPAN  CLASS="textit">rule set</SPAN>. 
 
 <P>
 
 <UL>
 <LI>Notice the curly braces. Also, notice that each statement inside the curly braces has a semicolon. Everything
-inside the curly braces is called a <A NAME="2601"></A><SPAN  CLASS="textit">declaration block</SPAN>.
+inside the curly braces is called a <A NAME="2609"></A><SPAN  CLASS="textit">declaration block</SPAN>.
 </LI>
-<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2603"></A><SPAN  CLASS="textit">selector</SPAN>.
+<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2611"></A><SPAN  CLASS="textit">selector</SPAN>.
 
 <P>
 Here we're using commas to separate our selectors <code>th</code> and <code>td</code>. 
 This is a useful method to use to combine multiple selectors in a single rule set. 
 In this case, the styles will apply to all <code>&lt;th&gt;</code> and <code>&lt;td&gt;</code> elements,
 </LI>
-<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2605"></A><SPAN  CLASS="textit">declaration</SPAN>. 
+<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2613"></A><SPAN  CLASS="textit">declaration</SPAN>. 
 </LI>
-<LI>Additionally, each declaration consists of a <A NAME="2607"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
-and a <A NAME="2609"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
+<LI>Additionally, each declaration consists of a <A NAME="2615"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
+and a <A NAME="2617"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
 </LI>
 <LI>Each CSS declaration ends with a semicolon.
 </LI>
@@ -520,7 +522,7 @@ a:hover {
    color: red;
 }
 </PRE>
-¿Que porción del selector es conocido como <A NAME="2615"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
+¿Que porción del selector es conocido como <A NAME="2623"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
 ¿Cuando se aplica la regla a un ancla <code>&lt;a&gt;</code>?
 </LI>
 <LI>Exprese con palabras a que elementos del documento se aplicará la siguiente regla:
@@ -567,28 +569,59 @@ body div.container {
 <P>
 
 <H4><A NAME="SECTION04120050000000000000">
+CSS reset</A>
+</H4>
+  
+
+Every browser applies certain styles to elements on a web page by default. 
+
+<P>
+For example, if you use an un-ordered list (the <code>&lt;ul&gt;</code> element) the browser will display the list with some existing
+formatting styles, including bullets next to the individual list items (the <code>&lt;li&gt;</code> elements inside the <code>&lt;ul&gt;</code>). 
+
+<P>
+By using a <A NAME="2629"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
+to a bare minimum. 
+
+<P>
+Two of the most popular CSS resets are 
+<A NAME="tex2html27"
+  HREF="http://meyerweb.com/eric/tools/css/reset/">Eric Meyer's Reset </A>
+and 
+<A NAME="tex2html28"
+  HREF="http://necolas.github.io/normalize.css/">Nicolas Gallagher's Normalize.css</A>
+<P>
+<PRE>
+    &lt;title&gt;JavaScript Temperature Converter&lt;/title&gt;
+    &lt;link href=normalize.css" rel="stylesheet" type="text/css"&gt;
+    &lt;link href="global.css" rel="stylesheet" type="text/css"&gt;
+</PRE>
+
+<P>
+
+<H4><A NAME="SECTION04120060000000000000">
 Propiedades CSS</A>
 </H4>
   
 
 <UL>
 <LI>The CSS 
-<A NAME="tex2html27"
+<A NAME="tex2html29"
   HREF="http://www.w3schools.com/css/css_padding.asp">padding</A>
 properties define the space between the element border and the element content.
 </LI>
 <LI>The 
-<A NAME="tex2html28"
+<A NAME="tex2html30"
   HREF="http://www.w3schools.com/cssref/pr_pos_vertical-align.asp">vertical-align</A>
 property sets the vertical alignment of an element.
 </LI>
 <LI>The 
-<A NAME="tex2html29"
+<A NAME="tex2html31"
   HREF="http://www.w3schools.com/cssref/pr_text_text-align.asp">text-align</A>
 property specifies the horizontal alignment of text in an element.
 </LI>
 <LI>The 
-<A NAME="tex2html30"
+<A NAME="tex2html32"
   HREF="http://www.w3schools.com/cssref/pr_font_font-family.asp">font-family</A>
 property specifies the font for an element.
 
@@ -599,7 +632,7 @@ The font-family property can hold several font names as a "fallback" system. If 
 
 <P>
 
-<H4><A NAME="SECTION04120060000000000000">
+<H4><A NAME="SECTION04120070000000000000">
 temperature.js</A>
 </H4>
   
@@ -638,7 +671,7 @@ temperature.js</A>
 
 <P>
 
-<H4><A NAME="SECTION04120070000000000000">
+<H4><A NAME="SECTION04120080000000000000">
 Despliegue</A>
 </H4>
   
@@ -651,7 +684,7 @@ Vea la sección <I>GitHub Project Pages</I> <A HREF="node85.html#subsection:gith
 
 <P>
 
-<H4><A NAME="SECTION04120080000000000000">
+<H4><A NAME="SECTION04120090000000000000">
 Mocha y Chai</A>
 </H4>
   
@@ -666,7 +699,7 @@ that runs in Node.js or in the browser.
 <P>
 It is open source (MIT licensed),
 and we can learn more about it at
-<A NAME="tex2html31"
+<A NAME="tex2html33"
   HREF="https://github.com/mochajs/mocha">https://github.com/mochajs/mocha</A>
 <P>
 Let's say
@@ -675,7 +708,7 @@ helpers to perform all kinds of assertions against your JavaScript code.
 
 <P>
 
-<H4><A NAME="SECTION04120090000000000000">
+<H4><A NAME="SECTION041200100000000000000">
 Pruebas: Estructura</A>
 </H4>
   
@@ -707,14 +740,14 @@ tests
 <P>
 Añadimos <code>chai.js</code>
 (Véase 
-<A NAME="tex2html32"
+<A NAME="tex2html34"
   HREF="http://chaijs.com/guide/installation/">http://chaijs.com/guide/installation/</A>) al directorio <code>tests</code>.
 
 <P>
 Chai is a platform-agnostic BDD/TDD assertion library featuring several interfaces 
 (for example, should, expect, and assert). 
 It is open source (MIT licensed), and we can learn more about it at
-<A NAME="tex2html33"
+<A NAME="tex2html35"
   HREF="http://chaijs. com/">http://chaijs. com/</A>
 <P>
 We can also install Chai on the command line using npm, as follows:
@@ -724,12 +757,12 @@ We can also install Chai on the command line using npm, as follows:
 
 <P>
 The latest tagged version will be available for hot-linking at 
-<A NAME="tex2html34"
+<A NAME="tex2html36"
   HREF="http://chaijs.com/chai.js">http://chaijs.com/chai.js</A>.
 
 <P>
 If you prefer to host yourself, use the <code>chai.js</code> file from the root of the 
-<A NAME="tex2html35"
+<A NAME="tex2html37"
   HREF="https://github.com/chaijs/chai">github project</A>. 
 
 <P>
@@ -746,12 +779,12 @@ tests/
 </PRE>
 Podemos encontrar un ejemplo de  unit testing en JavaScript en el browser con 
 el testing framework Mocha y  Chai en el repositorio 
-<A NAME="tex2html36"
+<A NAME="tex2html38"
   HREF="https://github.com/ludovicofischer/mocha-chai-browser-demo">https://github.com/ludovicofischer/mocha-chai-browser-demo</A>.
 
 <P>
 
-<H4><A NAME="SECTION041200100000000000000">
+<H4><A NAME="SECTION041200110000000000000">
 Pruebas: <TT>index.html</TT></A>
 </H4>
   
@@ -806,7 +839,7 @@ Modificamos <code>index.html</code> para
 
 <P>
 
-<H4><A NAME="SECTION041200110000000000000">
+<H4><A NAME="SECTION041200120000000000000">
 Pruebas: Añadir los tests</A>
 </H4>
   
@@ -851,20 +884,20 @@ suite('temperature', function() {
 
 <P>
 
-<H4><A NAME="SECTION041200120000000000000">
+<H4><A NAME="SECTION041200130000000000000">
 Pruebas: Véase</A>
 </H4>
   
 
 <UL>
-<LI><A NAME="tex2html37"
+<LI><A NAME="tex2html39"
   HREF="https://nicolas.perriault.net/code/2013/testing-frontend-javascript-code-using-mocha-chai-and-sinon/">Testing your frontend JavaScript code using mocha, chai, and sinon</A>
 by Nicolas Perriault
 </LI>
-<LI><A NAME="tex2html38"
+<LI><A NAME="tex2html40"
   HREF="https://github.com/ludovicofischer/mocha-chai-browser-demo">An example setup for unit testing JavaScript in the browser with the Mocha testing framework and Chai assertions</A>
 </LI>
-<LI><A NAME="tex2html39"
+<LI><A NAME="tex2html41"
   HREF="http://www.kenpowers.net/blog/testing-in-browsers-and-node/">Testing in Browsers and Node with Mocha, Chai, Sinon, and Testem
 </A>
 </LI>
@@ -873,19 +906,19 @@ by Nicolas Perriault
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html913"
+<A NAME="tex2html916"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html907"
+<A NAME="tex2html910"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html901"
+<A NAME="tex2html904"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html909"
+<A NAME="tex2html912"
   HREF="node88.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html911"
+<A NAME="tex2html914"
   HREF="node91.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -925,17 +958,17 @@ by Nicolas Perriault
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html914"
+<B> Sig:</B> <A NAME="tex2html917"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html908"
+<B>Sup:</B> <A NAME="tex2html911"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html902"
+<B> Ant:</B> <A NAME="tex2html905"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
 <I>Casiano Rodríguez León <BR>
-2015-01-30</I>
+2015-01-31</I>
 </ADDRESS>
 </BODY>
 </HTML>
