--- a/node9.html
+++ b/node9.html
@@ -134,7 +134,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04120000000000000000"></A>
-   <A NAME="2590"></A>
+   <A NAME="2591"></A>
   
 <A NAME="sectionpractica:conversordetemperaturas"></A>
 <BR>
@@ -329,7 +329,7 @@ The <code>onchange</code> event occurs when the value of an element has been cha
  &lt;link href="global.css" rel="stylesheet" type="text/css"&gt;
 </PRE>
 </LI>
-<LI><A NAME="2595"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2597"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
+<LI><A NAME="2596"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2598"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
 </LI>
 </UL>
 
@@ -380,25 +380,25 @@ Sintáxis CSS</A>
 <PRE>
 th, td      { vertical-align: top; text-align: right; font-size:large; }     /* Don't center table cells  */
 </PRE>
-What you see above is referred to as a <A NAME="2607"></A><SPAN  CLASS="textit">rule set</SPAN>. 
+What you see above is referred to as a <A NAME="2608"></A><SPAN  CLASS="textit">rule set</SPAN>. 
 
 <P>
 
 <UL>
 <LI>Notice the curly braces. Also, notice that each statement inside the curly braces has a semicolon. Everything
-inside the curly braces is called a <A NAME="2609"></A><SPAN  CLASS="textit">declaration block</SPAN>.
+inside the curly braces is called a <A NAME="2610"></A><SPAN  CLASS="textit">declaration block</SPAN>.
 </LI>
-<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2611"></A><SPAN  CLASS="textit">selector</SPAN>.
+<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2612"></A><SPAN  CLASS="textit">selector</SPAN>.
 
 <P>
 Here we're using commas to separate our selectors <code>th</code> and <code>td</code>. 
 This is a useful method to use to combine multiple selectors in a single rule set. 
 In this case, the styles will apply to all <code>&lt;th&gt;</code> and <code>&lt;td&gt;</code> elements,
 </LI>
-<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2613"></A><SPAN  CLASS="textit">declaration</SPAN>. 
+<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2614"></A><SPAN  CLASS="textit">declaration</SPAN>. 
 </LI>
-<LI>Additionally, each declaration consists of a <A NAME="2615"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
-and a <A NAME="2617"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
+<LI>Additionally, each declaration consists of a <A NAME="2616"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
+and a <A NAME="2618"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
 </LI>
 <LI>Each CSS declaration ends with a semicolon.
 </LI>
@@ -522,7 +522,7 @@ a:hover {
    color: red;
 }
 </PRE>
-¿Que porción del selector es conocido como <A NAME="2623"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
+¿Que porción del selector es conocido como <A NAME="2624"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
 ¿Cuando se aplica la regla a un ancla <code>&lt;a&gt;</code>?
 </LI>
 <LI>Exprese con palabras a que elementos del documento se aplicará la siguiente regla:
@@ -580,7 +580,7 @@ For example, if you use an un-ordered list (the <code>&lt;ul&gt;</code> element)
 formatting styles, including bullets next to the individual list items (the <code>&lt;li&gt;</code> elements inside the <code>&lt;ul&gt;</code>). 
 
 <P>
-By using a <A NAME="2629"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
+By using a <A NAME="2630"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
 to a bare minimum. 
 
 <P>
@@ -603,6 +603,13 @@ and
 Propiedades CSS</A>
 </H4>
   
+
+<P>
+The <A NAME="2636"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usually invisible rectangular area that is created for each HTML element. This area has four basic components
+
+<P>
+
+<img src="cssboxmodel.png" />
 
 <UL>
 <LI>The CSS 
