--- a/node9.html
+++ b/node9.html
@@ -628,7 +628,7 @@ whatever else is visible on a web page.
 <LI><A NAME="2649"></A><SPAN  CLASS="textbf">Padding</SPAN>
 
 <P>
-The padding of an element is defined using the padding property. The padding is the space around the content. 
+The <code>padding</code> of an element is defined using the <code>padding</code> property. The <code>padding</code> is the space around the content. 
 
 <P>
 It can be defined for an individual side 
