--- a/node9.html
+++ b/node9.html
@@ -134,7 +134,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04120000000000000000"></A>
-   <A NAME="2600"></A>
+   <A NAME="2605"></A>
   
 <A NAME="sectionpractica:conversordetemperaturas"></A>
 <BR>
@@ -329,7 +329,7 @@ The <code>onchange</code> event occurs when the value of an element has been cha
  &lt;link href="global.css" rel="stylesheet" type="text/css"&gt;
 </PRE>
 </LI>
-<LI><A NAME="2605"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2607"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
+<LI><A NAME="2610"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2612"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
 </LI>
 </UL>
 
@@ -380,25 +380,25 @@ Sintáxis CSS</A>
 <PRE>
 th, td      { vertical-align: top; text-align: right; font-size:large; }     /* Don't center table cells  */
 </PRE>
-What you see above is referred to as a <A NAME="2617"></A><SPAN  CLASS="textit">rule set</SPAN>. 
+What you see above is referred to as a <A NAME="2622"></A><SPAN  CLASS="textit">rule set</SPAN>. 
 
 <P>
 
 <UL>
 <LI>Notice the curly braces. Also, notice that each statement inside the curly braces has a semicolon. Everything
-inside the curly braces is called a <A NAME="2619"></A><SPAN  CLASS="textit">declaration block</SPAN>.
+inside the curly braces is called a <A NAME="2624"></A><SPAN  CLASS="textit">declaration block</SPAN>.
 </LI>
-<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2621"></A><SPAN  CLASS="textit">selector</SPAN>.
+<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2626"></A><SPAN  CLASS="textit">selector</SPAN>.
 
 <P>
 Here we're using commas to separate our selectors <code>th</code> and <code>td</code>. 
 This is a useful method to use to combine multiple selectors in a single rule set. 
 In this case, the styles will apply to all <code>&lt;th&gt;</code> and <code>&lt;td&gt;</code> elements,
 </LI>
-<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2623"></A><SPAN  CLASS="textit">declaration</SPAN>. 
+<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2628"></A><SPAN  CLASS="textit">declaration</SPAN>. 
 </LI>
-<LI>Additionally, each declaration consists of a <A NAME="2625"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
-and a <A NAME="2627"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
+<LI>Additionally, each declaration consists of a <A NAME="2630"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
+and a <A NAME="2632"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
 </LI>
 <LI>Each CSS declaration ends with a semicolon.
 </LI>
@@ -522,7 +522,7 @@ a:hover {
    color: red;
 }
 </PRE>
-¿Que porción del selector es conocido como <A NAME="2633"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
+¿Que porción del selector es conocido como <A NAME="2638"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
 ¿Cuando se aplica la regla a un ancla <code>&lt;a&gt;</code>?
 </LI>
 <LI>Exprese con palabras a que elementos del documento se aplicará la siguiente regla:
@@ -580,7 +580,7 @@ For example, if you use an un-ordered list (the <code>&lt;ul&gt;</code> element)
 formatting styles, including bullets next to the individual list items (the <code>&lt;li&gt;</code> elements inside the <code>&lt;ul&gt;</code>). 
 
 <P>
-By using a <A NAME="2639"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
+By using a <A NAME="2644"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
 to a bare minimum. 
 
 <P>
@@ -605,7 +605,7 @@ Propiedades CSS</A>
   
 
 <P>
-The <A NAME="2645"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usually invisible rectangular area that is created for each HTML element. This area has four basic components
+The <A NAME="2650"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usually invisible rectangular area that is created for each HTML element. This area has four basic components
 
 <P>
 
@@ -614,7 +614,7 @@ The <A NAME="2645"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usua
 <P>
 
 <UL>
-<LI><A NAME="2647"></A><SPAN  CLASS="textbf">Content</SPAN> 
+<LI><A NAME="2652"></A><SPAN  CLASS="textbf">Content</SPAN> 
 
 <P>
 The content portion of the box model holds the actual content. 
@@ -625,7 +625,7 @@ whatever else is visible on a web page.
 
 <P>
 </LI>
-<LI><A NAME="2649"></A><SPAN  CLASS="textbf">Padding</SPAN>
+<LI><A NAME="2654"></A><SPAN  CLASS="textbf">Padding</SPAN>
 
 <P>
 The <code>padding</code> of an element is defined using the <code>padding</code> property. The <code>padding</code> is the space around the content. 
@@ -637,14 +637,15 @@ for all four sides in one declaration
 <code>padding: 20px 10px 30px 20px</code>, for instance. 
 
 <P>
-When declaring all four sides, you’re using a <A NAME="2651"></A><SPAN  CLASS="textbf">shorthand property</SPAN>. 
+When declaring all four sides, you’re using a <A NAME="2656"></A><SPAN  CLASS="textbf">shorthand property</SPAN>. 
 
 <P>
-Often when a CSS property takes multiple values like this, they start at the top and go clockwise in relation to the element. 
+Often when a CSS property takes multiple values like this, 
+<FONT COLOR="#0000ff"> they start at the top and go clockwise in relation to the element</FONT>. 
 So, in the example just cited, this would apply <code>20px</code> of padding to the
 top, <code>10px</code> to the right, <code>30px</code> to the bottom, and <code>20px</code> to the left.
 </LI>
-<LI><A NAME="2653"></A><SPAN  CLASS="textbf">Border</SPAN> 
+<LI><A NAME="2660"></A><SPAN  CLASS="textbf">Border</SPAN> 
 
 <P>
 The border of an element is defined using the border property. 
@@ -655,6 +656,25 @@ This is a
 <PRE>
 border: 4px dashed orange.
 </PRE>
+
+<P>
+</LI>
+<LI><A NAME="2664"></A><SPAN  CLASS="textbf">Margin</SPAN> 
+
+<P>
+Margins are similar to padding, and are defined using similar syntax 
+
+<P>
+<PRE>
+margin-left: 15px or margin: 10px 20px 10px 20px)
+</PRE>
+
+<P>
+The margin portion of an element exists outside the element. 
+
+<P>
+
+<FONT COLOR="#0000ff"> A margin creates space between the targeted element and surrounding elements</FONT>.
 </LI>
 </UL>
 
