--- a/node9.html
+++ b/node9.html
@@ -644,6 +644,10 @@ Often when a CSS property takes multiple values like this,
 <FONT COLOR="#0000ff"> they start at the top and go clockwise in relation to the element</FONT>. 
 So, in the example just cited, this would apply <code>20px</code> of padding to the
 top, <code>10px</code> to the right, <code>30px</code> to the bottom, and <code>20px</code> to the left.
+
+<P>
+See <A NAME="tex2html29"
+  HREF="http://www.w3schools.com/css/css_padding.asp">padding examples at w3schools</A>.
 </LI>
 <LI><A NAME="2662"></A><SPAN  CLASS="textbf">Border</SPAN> 
 
@@ -683,11 +687,6 @@ The margin portion of an element exists outside the element.
 <P>
 
 <UL>
-<LI>The CSS 
-<A NAME="tex2html29"
-  HREF="http://www.w3schools.com/css/css_padding.asp">padding</A>
-properties define the space between the element border and the element content.
-</LI>
 <LI>The 
 <A NAME="tex2html30"
   HREF="http://www.w3schools.com/cssref/pr_pos_vertical-align.asp">vertical-align</A>
@@ -1046,7 +1045,7 @@ by Nicolas Perriault
 <!--End of Navigation Panel-->
 <ADDRESS>
 <I>Casiano Rodríguez León <BR>
-2015-01-31</I>
+2015-02-01</I>
 </ADDRESS>
 </BODY>
 </HTML>
